mywork/force-app/main/default/objects/Scratch_Org_Definition__c/Scratch_Org_Definition__c.object-meta.xml
<CustomObject>
    <description>Options used when creating a scratch org</description>
    <label>Scratch Org Definition</label>
    <nameField>
        <label>Scratch Org Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scratch Org Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>