mywork/force-app/main/default/objects/Scratch_Org_Definition__c/fields/Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>Admin_Email__c</fullName>
    <description>adminEmail</description>
    <inlineHelpText>Defaults to Email address of the Dev Hub user making the scratch org creation request</inlineHelpText>
    <label>Admin Email</label>
    <type>Email</type>
</CustomField>