mywork/force-app/main/default/objects/Scratch_Org_Definition__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Defaults to Dev Hub&#39;s country. If you want to override this value, enter the two-character, upper-case ISO-3166 country code (Alpha-2 code). You can find a full list of these codes at several sites, such as: https://www.iso.org/obp/ui/#search. This value sets the locale of the scratch org.</description>
    <inlineHelpText>Defaults to Dev Hub&#39;s country. If you want to override this value, enter the two-character, upper-case ISO-3166 country code (Alpha-2 code). You can find a full list of these codes at several sites, such as: https://www.iso.org/obp/ui/#search.</inlineHelpText>
    <label>Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>