mywork/force-app/main/default/objects/Scratch_Org_Definition__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>2000-character free-form text field. The description is a good way to document the scratch org’s purpose. You can view or edit the description in the Dev Hub.</inlineHelpText>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>