mywork/force-app/main/default/objects/Scratch_Org_Definition__c/fields/Disabled_Org_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Disabled_Org_Preferences__c</fullName>
    <label>Disabled Org Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Supported_Org_Preferences</valueSetName>
    </valueSet>
</CustomField>