mywork/force-app/main/default/objects/Scratch_Org_Definition__c/fields/Features__c.field-meta.xml
<CustomField>
    <fullName>Features__c</fullName>
    <description>features</description>
    <inlineHelpText>The features to enable</inlineHelpText>
    <label>Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>AuthorApex</fullName>
            </value>
            <value>
                <fullName>Communities</fullName>
            </value>
            <value>
                <fullName>ContactsToMultipleAccounts</fullName>
            </value>
            <value>
                <fullName>ContractApprovals</fullName>
            </value>
            <value>
                <fullName>CascadeDelete</fullName>
            </value>
            <value>
                <fullName>CustomerSelfService</fullName>
            </value>
            <value>
                <fullName>CustomApps</fullName>
            </value>
            <value>
                <fullName>CustomTabs</fullName>
            </value>
            <value>
                <fullName>DebugApex</fullName>
            </value>
            <value>
                <fullName>DefaultWorkflowUser</fullName>
            </value>
            <value>
                <fullName>ExpandedSourceTracking</fullName>
            </value>
            <value>
                <fullName>ExternalSharing (not available in Group Edition)</fullName>
            </value>
            <value>
                <fullName>ForceComPlatform</fullName>
            </value>
            <value>
                <fullName>MultiCurrency</fullName>
            </value>
            <value>
                <fullName>PersonAccounts</fullName>
            </value>
            <value>
                <fullName>SalesWave</fullName>
            </value>
            <value>
                <fullName>LightningSalesConsole</fullName>
            </value>
            <value>
                <fullName>LightningServiceConsole</fullName>
            </value>
            <value>
                <fullName>ServiceCloud</fullName>
            </value>
            <value>
                <fullName>ServiceWave</fullName>
            </value>
            <value>
                <fullName>SiteDotCom</fullName>
            </value>
            <value>
                <fullName>Sites</fullName>
            </value>
            <value>
                <fullName>StateAndCountryPicklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>