mywork/force-app/main/default/objects/Scratch_Org_Definition__c/fields/Has_Sample_Data__c.field-meta.xml
<CustomField>
    <fullName>Has_Sample_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>hasSampleData</description>
    <inlineHelpText>False is the default, which creates an org without sample data.</inlineHelpText>
    <label>Has Sample Data</label>
    <type>Checkbox</type>
</CustomField>