mywork/force-app/main/default/objects/Scratch_Org_Definition__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>language</description>
    <inlineHelpText>Default language for the country. To override the language set by the Dev Hub locale, see Supported Languages(https://help.salesforce.com/articleView?id=faq_getstart_what_languages_does.htm&amp;type=5) for the codes to use in this field.</inlineHelpText>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>