mywork/force-app/main/default/objects/Scratch_Org_Definition__c/fields/Org_Name__c.field-meta.xml
<CustomField>
    <fullName>Org_Name__c</fullName>
    <inlineHelpText>Corresponds to orgName in the Scratch Org Definition File. Defaults to Company If Not Specified</inlineHelpText>
    <label>Org Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>